// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Link > should do nothing on click when disabled 1`] = `
<DocumentFragment>
  <a
    class="ring-focus group inline-block css-1flyqpm"
    data-ring-focus-margin="-m-1"
    data-testid="Link"
    href="https://app.arkvault.io/"
    rel="noopener noreferrer"
  >
    <span
      class="css-1cv5b0m"
    >
      app.arkvault.io
    </span>
    <div
      class="mb-[3px] shrink-0 align-middle duration-200 inline-block text-sm css-v0ob3f"
      data-testid="Link__external"
      height="16"
      width="16"
    >
      <svg
        id="arrow-external"
        viewBox="0 0 20 20"
        x="0"
        xml:space="preserve"
        xmlns="http://www.w3.org/2000/svg"
        y="0"
      >
        <path
          d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
          fill="none"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
        />
      </svg>
    </div>
  </a>
</DocumentFragment>
`;

exports[`Link > should render 1`] = `
<DocumentFragment>
  <a
    class="ring-focus group inline-block css-7nwwrh"
    data-ring-focus-margin="-m-1"
    data-testid="Link"
    href="#/test"
  >
    <span
      class="css-170792"
    >
      Test
    </span>
  </a>
</DocumentFragment>
`;

exports[`Link > should render external without children 1`] = `
<DocumentFragment>
  <a
    class="ring-focus group inline-block css-7nwwrh"
    data-ring-focus-margin="-m-1"
    data-testid="Link"
    href="https://app.arkvault.io"
    rel="noopener noreferrer"
  >
    <span
      class="css-170792"
    />
    <div
      class="mb-[3px] shrink-0 align-middle duration-200 css-v0ob3f"
      data-testid="Link__external"
      height="16"
      width="16"
    >
      <svg
        id="arrow-external"
        viewBox="0 0 20 20"
        x="0"
        xml:space="preserve"
        xmlns="http://www.w3.org/2000/svg"
        y="0"
      >
        <path
          d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
          fill="none"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
        />
      </svg>
    </div>
  </a>
</DocumentFragment>
`;
